k8s/base/payshield-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payshield-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.payshield.io
        - ws.payshield.io
      secretName: payshield-tls
  rules:
    - host: api.payshield.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payshield-api
                port:
                  name: http
    - host: ws.payshield.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payshield-ws
                port:
                  name: ws
